# yt-dlp-tui

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  publish.sh
.github/workflows/: release.yml
src/: args.rs  config.rs  executor.rs  main.rs  parser.rs  proc.rs  setup.rs  ui.rs  utils.rs
